[package]
name = "sprintz_sys"
version = "0.1.0"
edition = "2021"

links = "sprintz"
build = "build.rs"

authors = ["mwlon <m.w.loncaric@gmail.com>"]
categories = ["compression", "encoding"]
description = "Sprintz codec bindings"
include = [
    "src/**/*",
    "vendor/sprintz/cpp/Compress/*.cpp",
    "vendor/sprintz/cpp/Compress/*.h",
    "vendor/sprintz/cpp/Compress/*.hpp",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
license-file = "LICENSE"
repository = "https://github.com/mwlon/sprintz-sys"

[build-dependencies]
cc = "1.0"
